--- a/.github/workflows/ci_run.yml
+++ b/.github/workflows/ci_run.yml
@@ -23,5 +23,5 @@ jobs:
       run: go build -v
       
     - name: Run Tests
-      run: go test .
+      run: go test -v
       timeout-minutes: 3
